implementacija kartica i izmene notificatin servisa
